gemini: Enable save incremental after saving a new file.

Caption isn't updated properly yet, but I could not really figure out
how to do that properly.

BUG: 333213